# viro

./: CHANGELOG.md  DIRECT_NEW_ARCHITECTURE_MIGRATION.md  README.md  dynamic-index-source.d.ts  dynamic-index.ts  fabric.d.ts  fabric.ts  index.ts  package-lock.json  package.json
android/: settings.gradle
android/react_viro/: react_viro-release.aar
android/viro_bridge/: build.gradle
android/viro_bridge/src/main/cpp/: CMakeLists.txt
android/viro_bridge/src/main/cpp/fabric/: ViroFabricContainerJSI.cpp
components/AR/: ViroARPlaneSelector.tsx
components/Utilities/: ViroVersion.ts
docs/: FABRIC_INTEROP_TECHNICAL_FLOW.md
fabric-interop/: NativeViro.ts  README.md  ViroEventsManager.js  ViroEventsManager.ts  ViroFabricContainer.tsx  global.d.ts  index.ts  metro.config.js  package.json  react-native.config.js  tsconfig.json
fabric-interop/components/: Viro360Image.tsx  Viro360Video.tsx  Viro3DObject.tsx  Viro3DSceneNavigator.tsx  ViroARCamera.tsx  ViroARImageMarker.tsx  ViroARObjectMarker.tsx  ViroARPlane.tsx  ViroARScene.tsx  ViroARSceneNavigator.tsx  ViroAmbientLight.tsx  ViroAnimatedComponent.tsx  ViroAnimatedImage.tsx  ViroBox.tsx  ViroButton.tsx  ViroCamera.tsx  ViroController.tsx  ViroDirectionalLight.tsx  ViroFlexView.tsx  ViroGeometry.tsx  ViroGlobal.ts  ViroImage.tsx  ViroLightingEnvironment.tsx  ViroMaterialVideo.tsx  ViroNode.tsx  ViroOmniLight.tsx  ViroPolygon.tsx  (+21 more)
ios/: ViroReact.podspec
plugins/: withViro.ts  withViroAndroid.ts  withViroIos.ts
specs/: ViroCameraTurboModule.ts  ViroReactTurboModule.ts  ViroSceneNavigatorTurboModule.ts  index.ts
(+178 files in other folders)
